--- a/main.html
+++ b/main.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8">
+  <title>IMDb Movie Detail</title>
+  <style>
+    body {
+      background-color: #121212;
+      color: #ffffff;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
+    .moviePic {
+      height: 400px;
+      width: 270px;
+      opacity: 0.9;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+      margin-bottom: 20px;
+    }
+
+    .movieDetail {
+      position: relative;
+      top: 0;
+      width: 60%;
+      text-align: center;
+      font-size: 18px;
+      line-height: 1.6;
+      background-color: rgba(255, 255, 255, 0.05);
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.05);
+    }
+  </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <img src="https://m.media-amazon.com/images/M/MV5BMTY5OTY2Njk4MV5BMl5BanBnXkFtZTcwODI5OTM0Mw@@._V1_.jpg" 
+       alt="Inception Movie Poster" 
+       class="moviePic">
+
+  <p class="movieDetail">
+    *Inception* is a 2010 science fiction action film written and directed by Christopher Nolan. 
+    The film stars Leonardo DiCaprio as a professional thief who steals information by infiltrating the subconscious. 
+    With stunning visuals and a mind-bending storyline, *Inception* explores the concept of dreams within dreams, 
+    challenging the perception of reality.
+  </p>
 
 </body>
-
 </html>
